--- a/www/views/login/loginIn.html
+++ b/www/views/login/loginIn.html
@@ -15,7 +15,7 @@
 
             <h2 style='text-align: center;width: 100%;font-family: cleanator;' translate>for Better for Dust</h2>
 
-            <ion-list show-delete="true" ng-show="loginErrMsgs.length">
+            <ion-list show-delete="true" ng-show="loginErrCode || loginErrMsgs.length">
                 <ion-item class="item item-icon-left item-dark item-text-wrap">
                     <ion-delete-button class="ion-close-round"
                                        ng-click="loginErrMsgs.splice($index,1)"></ion-delete-button>
@@ -26,7 +26,7 @@
                     <span ng-show="loginErrCode == 'loginNoConnection'"
                           translate>No connection, please verify your network.</span>
                 </ion-item>
-                <ion-item class="item item-icon-left item-dark item-text-wrap">
+                <ion-item class="item item-icon-left item-dark item-text-wrap" ng-show="loginErrMsgs.length">
                     [
                     <small style="font-style: italic"
                            ng-repeat="msg in loginErrMsgs track by $index"> &nbsp {{msg}}
@@ -71,6 +71,10 @@
                                         ng-disabled="!userLoginEmail || !userLoginPassword"
                                         ng-click="navGAClick('login_'+userLoginEmail)">{{'LoginSignin'|translate}}
                                 </button>
+                                <div>
+                                    <a class="button button-full button-clear button-positive" href="https://miapp.io/forgot"
+                                       target="_blank" translate>Forgot your login/password ?</a>
+                                </div>
                             </div>
 
                             <br><br><span style="float:right;font-size:10px;"><span app-version></span> {{navAppOnlineLevel()}}</span>
@@ -102,6 +106,10 @@
                             <button class='button button-block button-positive' ng-click="loginInDemoMode()"
                                     translate>LoginSignin
                             </button>
+                            <div>
+                                <a class="button button-full button-clear button-positive" href="https://miapp.io/forgot"
+                                   target="_blank" translate>Forgot your login/password ?</a>
+                            </div>
                         </form>
                     </div>
                 </div>
